--- a/src/App.css
+++ b/src/App.css
@@ -102,3 +102,20 @@ tr.score-rows {
     margin: 0.25rem;
     font-size: 0.85rem;
 }
+
+.SortButton {
+    /* background-color:rgb(112, 186, 255); */
+    background-color: greenyellow;
+    color: red;
+    font-weight: 700;
+    border: rgb(0, 102, 204) 0.25rem solid;
+    border-radius: 5px;
+    padding: 1rem;
+    margin: auto;
+    cursor: pointer;
+    margin-top: 1rem;
+}
+
+.nav {
+    display: flex;
+}
