--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,13 @@
         src: url('./PublicPixel-0W5Kv.ttf');
 }
 
+html{
+    background-color: rgb(112, 186, 255);
+    padding: 2rem 0 5rem;
+    width: 100vw;
+
+}
+
 * {
     font-family: publicPixelFont, monospace;
 }
@@ -50,9 +57,7 @@ body {
 }
 
 #root {background-color: rgb(112, 186, 255);
-    width: 100%;
-    height: 100vh;
-    padding-bottom: 5rem;}
+    width: 100%;}
 
 .App {
     width: 100%;
